[package]
name = "cancers"
version = "0.1.0"
authors = ["David Golembiowski <david@dgolembiowski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "cancers"
path = "src/main.rs"

[dependencies]
goblin = "0.4.2"
anyhow = "1.0.43"
system_shutdown = "3.0.0"
rand = "0.8.4"
